--- a/src/app/sections/story-maps/component/station-popup/station-popup.component.scss
+++ b/src/app/sections/story-maps/component/station-popup/station-popup.component.scss
@@ -40,9 +40,11 @@
     padding: 0 6px;
     border: 4px solid $colorTempBorder;
     background-color: $colorTempBg;
+    width: 130px;
     font-size: 48px;
     line-height: 1;
     white-space: nowrap;
+    overflow: hidden;
     @include font('repsolviet');
     &:before {
       @include pseudoElemIcon('/assets/icons/weather/moon.svg', 28px, 28px);
@@ -143,7 +145,7 @@
     }
   }
   .waylet-item {
-    padding: 12px 10px;
+    padding: 12px;
     font-size: 16px;
     display: flex;
     align-items: center;
@@ -156,6 +158,7 @@
     }
     strong {
       @include font(bold);
+      min-width: 52px;
     }
     span {
       flex-grow: 1;
@@ -181,7 +184,7 @@
         }
       }
       &:before {
-        margin-right: 8px;
+        margin-right: 12px;
       }
     }
   }
@@ -201,7 +204,7 @@
       pointer-events: auto;
       width: auto;
       height: auto;
-      width: 280px;
+      width: 250px;
       max-height: 445px;
       transition: opacity $animationTimeFast $animationFuncAlt $animationTimeFast, width $animationTimeFast $animationFuncAlt, max-height $animationTimeFast $animationFuncAlt;
       position: relative;
@@ -292,13 +295,22 @@
     padding-right: 14px;
     text-align: right;
   }
+
+  .li-enter-anim {
+    animation: listEnter $animationTimeDefault $animationFuncAlt;
+    animation-fill-mode: both;
+  }
 }
 
-@keyframes wayletList {
+@keyframes listEnter {
   from {
-    transform: translateY(-100%);
+    max-height: 0;
+    opacity: 0;
+    padding: 0 12px;
   }
   to {
-    transform: translateY(0);
+    max-height: 100%;
+    opacity: 1;
+    padding: 12px;
   }
 }
