--- a/src/app/sections/story-maps/component/station-popup/station-popup.component.html
+++ b/src/app/sections/story-maps/component/station-popup/station-popup.component.html
@@ -15,7 +15,7 @@
   <div class="services" *ngIf="currentTab === 'summary'">
     <img src="/assets/icons/services/24hours.svg" title="{{'24 horas' | translate}}">
     <img src="/assets/icons/services/premium-gas.svg" title="{{'Combustible premium' | translate}}">
-    <img src="/assets/icons/services/auto-gas.svg" title="{{'Auto-gas' | translate}}">
+    <img src="/assets/icons/services/auto-gas.svg" title="{{'AutoGas' | translate}}">
     <img src="/assets/icons/services/washing-tunnel.svg" title="{{'Túnel de lavado' | translate}}">
     <img src="/assets/icons/services/shop.svg" title="{{'Tienda' | translate}}">
   </div>
